My MoveIt + ros2_control updates

--- a/ros2_mecademic_gui/setup.cfg
+++ b/ros2_mecademic_gui/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/ros2_mecademic_gui
+script_dir=$base/lib/ros2_mecademic_gui
 [install]
-install-scripts=$base/lib/ros2_mecademic_gui
+install_scripts=$base/lib/ros2_mecademic_gui
