--- a/ros2_mecademic_simulator/setup.cfg
+++ b/ros2_mecademic_simulator/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/ros2_mecademic_simulator
+script_dir=$base/lib/ros2_mecademic_simulator
 [install]
-install-scripts=$base/lib/ros2_mecademic_simsimulator
+install_scripts=$base/lib/ros2_mecademic_simulator
